--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,6 +1,8 @@
 aws_region       = "us-east-1"
 station_ids      = ["KJWY"]
 lookback_hours   = 2.5
+metar_retention_days = 30
+run_retention_days   = 365
 alert_on_empty   = true
 alert_email      = "you@example.com"
 site_bucket_name = "replace-with-unique-metar-site-bucket"
